--- a/src/components/NewNoteModal/NewNoteModal.module.css
+++ b/src/components/NewNoteModal/NewNoteModal.module.css
@@ -10,8 +10,9 @@
     padding: 20px;
     border-radius: 20px;
     width: 400px;
-    height: 400px;
+    aspect-ratio: 1/1.1;
     z-index: 9999;
+    max-width: 95%;
 }
 
 .newNoteModal span{
@@ -53,6 +54,10 @@
     padding: 10px;
     text-align: center;
     cursor: pointer;
+    /* hide arrow */
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
 }
 
 .newNoteModal i.favoriteButton{
