--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -5,12 +5,51 @@
     margin-right: 5px;
     border-radius: 5px;
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
-    width: 300px;
+    min-width: 300px;
     padding: 0 10px;
     padding-bottom: 10px;
     padding-top: 5px;
     display: flex;
     flex-direction: column;
+    position: relative;
+    transition: transform 600ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.sidebar .hamburger {
+  cursor: pointer;
+  position: absolute;
+  right: 15px;
+  top: 15px;
+  display: none;
+}
+
+.sidebar .hamburger svg {
+  height: 2em;
+  transition: transform 600ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.sidebar .hamburger .line {
+  fill: none;
+  stroke: var(--dark-color);
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke-width: 3;
+  /* transition for transforming the Stroke */
+  transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
+              stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.sidebar .hamburger .lineTopBottom {
+  stroke-dasharray: 12 63;
+}
+
+/* To X */
+.sidebar .hamburger svg.x {
+  transform: rotate(-45deg);
+}
+.sidebar .hamburger svg.x .lineTopBottom {
+  stroke-dasharray: 20 300;
+  stroke-dashoffset: -32.42;
 }
 
 .sidebar h1{
@@ -49,7 +88,7 @@
     display: inline-block;
 }
 
-.sidebar .filters{
+.sidebar  .filters{
     overflow-y: auto;
     padding-right: 5px;
 }
@@ -61,7 +100,7 @@
 .sidebar .filters .deleteButton{
     font-size: .9rem;
     position: absolute;
-    right: 30px;
+    right: 10px;
     cursor: pointer;
 }
 
@@ -75,3 +114,40 @@
     cursor: pointer;
 }
 
+/* Sidebar Toggle */
+@media (max-width: 1145px) {
+    .sidebar{
+        position: fixed;
+        left: 0;
+        transform: translateX(-100%);
+        top: 0;
+        height: 100%;
+        z-index: 9999999999999999999;
+        margin: 0;
+    }
+
+    .sidebar.open{
+        transform: translateX(0%) !important;
+    }
+
+    .sidebar h1{
+        display: none;
+    }
+
+    .sidebar .hamburger{
+        display: block;
+        right: -15px;
+        transform: translateX(100%);
+        background: var(--dark-color);
+        border-radius: 5px;
+        width: 45px;
+        height: 45px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .sidebar .hamburger .line{
+        stroke: var(--light-color);
+    }
+}
