--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -137,7 +137,7 @@
         transform: translateX(-100%);
         top: 0;
         height: 100%;
-        z-index: 9999999999999999999;
+        z-index: 99;
         margin: 0;
     }
 
