--- a/src/variables.css
+++ b/src/variables.css
@@ -1,7 +1,7 @@
 :root{
     --light-color: rgb(247, 246, 246);
-    --bg-color: rgba(0, 0, 0, 0.06);
-    --dark-color: rgb(75, 73, 72);
+    --bg-color: #0000000f;
+    --dark-color: #4b4948;
     --soft-dark-color: rgb(107, 106, 106); /* borders */
     --warning-color: rgba(243, 124, 124, 0.68); /* invalid */
     --favorite-color: rgb(224, 160, 57);
